--- a/Pokemon Bootstrap/Poke'mon App/index.html
+++ b/Pokemon Bootstrap/Poke'mon App/index.html
@@ -1,73 +1,1 @@
-<html class="container-fluid">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width" />
-        <title>Matt's Pokédex</title>
-        <link rel="icon" href="css/PokeBall1.webp">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="css/styles.css" />
-    </head>
-        <h1>Matt's Pokédex</h1>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.pokemon.com/us/pokedex">Poke'mon Decks</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.pokemon.com/us/pokemon-video-games/all-pokemon-games/">Poke'mon Video-Games</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.pokemon.com/us/pokemon-episodes/pokemon-movies/">Poke'mon TV & Movies</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-
-        <ul class="pokemon-list"></ul>
-
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  ...
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn-secondary" data-dismiss="modal">Close</button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        <strong>
-            <script
-                src="https://code.jquery.com/jquery-3.3.1.min.js"
-                integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-                crossorigin="anonymous">
-            </script>
-            <script 
-                src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" 
-                integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" 
-                crossorigin="anonymous">
-            </script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" 
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
-            crossorigin="anonymous">
-            </script>
-            <script src="dist/script.js"></script>
-            <script src="src/script.js"></script>
-        </strong>
-</html>
+<html class=container-fluid><meta charset=utf-8><meta content="width=device-width"name=viewport><title>Matt's Pokédex</title><link href=css/PokeBall1.webp rel=icon><link href=https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css rel=stylesheet crossorigin=anonymous integrity=sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T><link href=css/styles.css rel=stylesheet><h1>Matt's Pokédex</h1><nav class="bg-light navbar navbar-expand-lg navbar-light"><a class=navbar-brand href=#>Navbar</a> <button class=navbar-toggler type=button aria-label="Toggle navigation"aria-controls=navbarNav aria-expanded=false data-target=#navbarNav data-toggle=collapse><span class=navbar-toggler-icon></span></button><div class="collapse navbar-collapse"id=navbarNav><ul class=navbar-nav><li class="nav-item active"><a class=nav-link href=#>Home <span class=sr-only>(current)</span></a><li class=nav-item><a class=nav-link href=https://www.pokemon.com/us/pokedex>Poke'mon Decks</a><li class=nav-item><a class=nav-link href=https://www.pokemon.com/us/pokemon-video-games/all-pokemon-games/ >Poke'mon Video-Games</a><li class=nav-item><a class=nav-link href=https://www.pokemon.com/us/pokemon-episodes/pokemon-movies/ >Poke'mon TV & Movies</a></ul></div></nav><ul class=pokemon-list></ul><div class="fade modal"id=exampleModal aria-hidden=true aria-labelledby=exampleModalLabel role=dialog tabindex=-1><div class=modal-dialog role=document><div class=modal-content><div class=modal-header><h5 class=modal-title id=exampleModalLabel>Modal title</h5><button class=close type=button aria-label=Close data-dismiss=modal><span aria-hidden=true>×</span></button></div><div class=modal-body>...</div><div class=modal-footer><button class=btn-secondary type=button data-dismiss=modal>Close</button></div></div></div></div><strong><script src=https://code.jquery.com/jquery-3.3.1.min.js crossorigin=anonymous integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="></script><script src=https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js crossorigin=anonymous integrity=sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1></script><script src=https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js crossorigin=anonymous integrity=sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM></script><script src=dist/script.js></script><script src=src/script.js></script></strong>
